GNOME Bugzilla – Bug 633350
g_hostname_to_ascii() ignores non-ascii dots
Last modified: 2010-12-15 08:59:53 UTC
In rfc3490 section 3.1: " Whenever dots are used as label separators, the following characters MUST be recognized as dots: U+002E (full stop), U+3002 (ideographic full stop), U+FF0E (fullwidth full stop), U+FF61 (halfwidth ideographic full stop)." so, for example the url "www.foo\u3002bar.com" should be "www.foo.bar.com" not "www.xn--foobar-rr3e.com" I've tried it with ICU and Qt and both work, see: http://source.icu-project.org/repos/icu/icu/trunk/source/common/uidna.cpp http://qt.gitorious.org/qt/qt/blobs/4.5/src/corelib/io/qurl.cpp#line5546
Created attachment 176171 [details] [review] ghostutils: Convert non-ASCII dots to '.' when converting hostnames Can you see if the webkit tests pass with this patch?
Yes, it fixes the non-ASCII dots test case, thanks!
Attachment 176171 [details] pushed as 7ee902a - ghostutils: Convert non-ASCII dots to '.' when converting hostnames