ghostutils: Convert non-ASCII dots to '.' when converting hostnames

Also add some test cases to test/hostutils for that and a few other
things, and make the test program just act as an ASCII/unicode
hostname converter rather than a test program if it's run with an
argument.

https://bugzilla.gnome.org/show_bug.cgi?id=633350